scripts/nullaway/nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8.txt
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/SudokuBoard.java:223: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return peers.get(pointToCell(x, y));
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/SudokuBoard.java:264: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return units.get(pointToCell(x, y));
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/ExactCoverSolver.java:25: error: [NullAway] parameter board is @NonNull, but parameter in superclass method sudoku.SudokuSolver.solve(sudoku.SudokuBoard) is @Nullable
    public SudokuBoard solve(SudokuBoard board) {
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/ExactCoverSolver.java:64: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return result;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/ExactCoverSolver.java:123: error: [NullAway] parameter board is @NonNull, but parameter in superclass method sudoku.SudokuSolver.isWellFormed(sudoku.SudokuBoard) is @Nullable
    public boolean isWellFormed(SudokuBoard board) {
                                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/ExactCoverSolver.java:179: error: [NullAway] parameter board is @NonNull, but parameter in superclass method sudoku.SudokuSolver.getFormity(sudoku.SudokuBoard) is @Nullable
    public int getFormity(SudokuBoard board) {
                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/Node.java:15: error: [NullAway] initializer method does not guarantee @NonNull fields left (line 11), right (line 11), up (line 11), down (line 11), head (line 13) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    Node() {
    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DancingLinks.java:66: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            Node node = new Node(null, null, bottom, top, top);
                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DancingLinks.java:66: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            Node node = new Node(null, null, bottom, top, top);
                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DancingLinks.java:97: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return result;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/ColumnHeader.java:28: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(null, 0);
             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/TopDownGenerator.java:54: error: [NullAway] passing @Nullable parameter 'solved' where @NonNull is required
        SudokuBoard board = new SudokuBoard(solved);
                                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/TopDownGenerator.java:62: error: [NullAway] dereferenced expression solved is @Nullable
                board.setCell(cell, solved.getCell(cell));
                                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/TargetGenerator.java:64: error: [NullAway] method returns @Nullable, but superclass method sudoku.generate.SudokuGenerator.getProblem() returns @NonNull
    public SudokuBoard getProblem() {
                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/DeductionGenerator.java:59: error: [NullAway] dereferenced expression solved is @Nullable
                board.setCell(cell, solved.getCell(cell));
                                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/DeductionGenerator.java:68: error: [NullAway] dereferenced expression solved is @Nullable
                    board.setCell(cell, solved.getCell(cell));
                                              ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/BottomUpGenerator.java:70: error: [NullAway] dereferenced expression options is @Nullable
            } while (board.isSet(cell) || options.cardinality() <= 1);
                                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/SolverService.java:25: error: [NullAway] @NonNull static field BOARD not initialized
    private static SudokuBoard BOARD;
                               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/CLPBoardGenerator.java:61: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return getRandomBoard(new SudokuBoard(p, q));
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/ConstraintSolver.java:26: error: [NullAway] method returns @Nullable, but superclass method sudoku.SudokuSolver.solve(sudoku.SudokuBoard) returns @NonNull
    public SudokuBoard solve(SudokuBoard board) {
                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/ConstraintSolver.java:105: error: [NullAway] parameter board is @NonNull, but parameter in superclass method sudoku.SudokuSolver.isWellFormed(sudoku.SudokuBoard) is @Nullable
    public boolean isWellFormed(SudokuBoard board) {
                                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/ConstraintSolver.java:146: error: [NullAway] parameter board is @NonNull, but parameter in superclass method sudoku.SudokuSolver.getFormity(sudoku.SudokuBoard) is @Nullable
    public int getFormity(SudokuBoard board) {
                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/backtrack/BacktrackSolver.java:52: error: [NullAway] method returns @Nullable, but superclass method sudoku.SudokuSolver.solve(sudoku.SudokuBoard) returns @NonNull
    public SudokuBoard solve(SudokuBoard board) {
                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/backtrack/BacktrackSolver.java:106: error: [NullAway] parameter board is @NonNull, but parameter in superclass method sudoku.SudokuSolver.isWellFormed(sudoku.SudokuBoard) is @Nullable
    public boolean isWellFormed(SudokuBoard board) {
                                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/backtrack/BacktrackSolver.java:152: error: [NullAway] parameter board is @NonNull, but parameter in superclass method sudoku.SudokuSolver.getFormity(sudoku.SudokuBoard) is @Nullable
    public int getFormity(SudokuBoard board) {
                                      ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
25 errors
